--- a/Hands-on_Exercise/Hands-on_Ex01/Hands-on_Ex01.qmd
+++ b/Hands-on_Exercise/Hands-on_Ex01/Hands-on_Ex01.qmd
@@ -29,7 +29,7 @@ By the end of this hands-on exercise, you should acquire the following competenc
 
 9.  performing Exploratory Data Analysis (EDA) by using appropriate functions from **ggplot2** package.
 
-> Note: Students are encouraged to read the reference guide of each function, especially the input data requirements, syntaxt and argument option before using them.
+> Note: Students are encouraged to read the reference guide of each function, especially the input data requirements, syntax and argument option before using them.
 
 # **2.0 Set-up** 
 
@@ -37,7 +37,7 @@ By the end of this hands-on exercise, you should acquire the following competenc
 
 ## **2.1 Data Acquisition**
 
-Data ais key to data analytics including geospatial analytics. In this hands-on exercise, I extracted the necessary data sets from the following sources:
+Data is key to data analytics including geospatial analytics. In this hands-on exercise, I extracted the necessary data sets from the following sources:
 
 -   Master Plan 2014 Subzone Boundary (Web) from [data.gov.sg](https://data.gov.sg/)
 
@@ -49,7 +49,18 @@ Data ais key to data analytics including geospatial analytics. In this hands-on 
 
 ### **2.1.1 File Structure** 
 
-`Hands-on_Ex01`
+```         
+Hands-on_Exercise
+|-- Hands-on_Ex01
+|   |-- Hands-on_Ex01.qmd
+|   |-- data
+|   |   |-- aspatial
+|   |   |   |-- listings.csv
+|   |   |-- geospatial
+|   |   |   |-- CyclingPath_Jul2024
+|   |   |   |-- MP14_SUBZONE_WEB_PL
+|   |   |   |-- PreSchoolsLocation.kml
+```
 
 ## **2.2 Installing R Packages** 
 
@@ -111,10 +122,10 @@ Dataset used: `CyclingPath`
 File Format: shapefile (shp) \| Data Frame Type: line feature
 
 ```{r}
-mpsz = st_read(dsn = "/Users/jezelei/jezeleii/IS415-GA/Hands-on_Exercise/Hands-on_Ex01/data/geospatial/CyclingPath_Jul2024", layer = "CyclingPathGazette")
+cyclingpath = st_read(dsn = "/Users/jezelei/jezeleii/IS415-GA/Hands-on_Exercise/Hands-on_Ex01/data/geospatial/CyclingPath_Jul2024", layer = "CyclingPathGazette")
 ```
 
-Interpretation : In the `cyclingpath` linestring feature data frame, there are 2558 features and 2 fields, and is in the **svy21** projected coordinates systems too.
+Interpretation : In the `cyclingpath` linestring feature data frame, there are 3138 features and 2 fields, and is in the **svy21** projected coordinates systems too.
 
 ## **3.3 Importing GIS data in kml format**
 
@@ -172,7 +183,8 @@ head(mpsz, n=5)
 In geospatial data science, by looking at the feature information is not enough. We are also interested to visualise the geospatial features. This is the time you will find *plot()* of R Graphic comes in very handy as shown in the code chunk below.
 
 ```{r}
-plot(mpsz)
+#plot(mpsz)
+plot(mpsz, max.plot = 15)
 ```
 
 The default plot of an sf object is a multi-plot of all attributes, up to a reasonable maximum as shown above. We can, however, choose to plot only the geometry by using the code chunk below.
@@ -182,3 +194,258 @@ plot(st_geometry(mpsz))
 ```
 
 Alternatively, we can also choose the plot the sf object by using a specific attribute as shown in the code chunk below:
+
+```{r}
+plot(mpsz["PLN_AREA_N"])
+```
+
+# **6.0 Working with Projection** 
+
+------------------------------------------------------------------------
+
+Map projection is an important property of a geospatial data. In order to perform geoprocessing using two geospatial data, we need to ensure that both geospatial data are projected using similar coordinate system.
+
+In this section, you will learn how to project a simple feature data frame from one coordinate system to another coordinate system. The technical term of this process is called **projection transformation**.
+
+## **6.1 Assigning EPSG code to a simple feature data frame** 
+
+One of the common issue that can happen during importing geospatial data into R is that the coordinate system of the source data was either missing (such as due to missing .proj for ESRI shapefile) or wrongly assigned during the importing process.
+
+To check the coordinate system of `mpsz` simple feature data frame, I use *st_crs()* of *sf* package as shown in the code chunk below.
+
+```{r}
+st_crs(mpsz)
+```
+
+Although `mpsz` data frame is projected in svy21 but when we read until the end of the print, it indicates that the EPSG is 9001. This is a wrong EPSG code because the correct EPSG code for svy21 should be [3414](https://epsg.io/3414).
+
+To assign the correct EPSG code to `mpsz` data frame, *st_set_crs()* of **sf** package is used as shown in the code chunk below.
+
+```{r}
+mpsz3414 <- st_set_crs(mpsz, 3414)
+```
+
+Now, let us check the CSR again by using the code chunk below.
+
+```{r}
+st_crs(mpsz3414)
+```
+
+Notice that the EPSG code is 3414 now.
+
+## **6.2 Transforming the projection of preschool from wgs84 to svy21.**
+
+In geospatial analytics, it is very common for us to transform the original data from geographic coordinate system to projected coordinate system. This is because geographic coordinate system is not appropriate if the analysis need to use distance or/and area measurements.
+
+Take preschool simple feature data frame as an example. The print below reveals that it is in wgs84 coordinate system.
+
+```         
+Geometry set for 2290 features 
+Geometry type: POINT
+Dimension:     XYZ
+Bounding box:  xmin: 103.6878 ymin: 1.247759 xmax: 103.9897 ymax: 1.462134
+z_range:       zmin: 0 zmax: 0
+Geodetic CRS:  WGS 84
+First 5 geometries:
+```
+
+This is a scenario that *st_set_crs()* is not appropriate and *st_transform()* of sf package should be used. This is because we need to reproject `preschool` from one coordinate system to another coordinate system mathemetically.
+
+Let us perform the projection transformation by using the code chunk below.
+
+```{r}
+preschool3414 <- st_transform(preschool, 
+                              crs = 3414)
+```
+
+> Note: In practice, we need find out the appropriate project coordinate system to use before performing the projection transformation.
+
+Next, let us display the content of preschool3414 sf data frame as shown below.
+
+```         
+Geometry set for 2290 features 
+Geometry type: POINT
+Dimension:     XYZ
+Bounding box:  xmin: 11810.03 ymin: 25596.33 xmax: 45404.24 ymax: 49300.88
+z_range:       zmin: 0 zmax: 0
+Projected CRS: SVY21 / Singapore TM
+First 5 geometries:
+```
+
+Notice that it is in svy21 projected coordinate system now. Furthermore, if you refer to *Bounding box:*, the values are greater than 0-360 range of decimal degree commonly used by most of the geographic coordinate systems.
+
+# 7.0 Importing & Converting An Aspatial Data
+
+In practice, it is not unusual that we will come across data such as `listing` of Inside Airbnb. We call this kind of data aspatial data. This is because it is not a geospatial data but among the data fields, there are two fields that capture the x- and y-coordinates of the data points.
+
+In this section, I will import an aspatial data into R environment and save it as a tibble data frame. Next, I will convert it into a simple feature data frame.
+
+Dataset used: `listings.csv` data downloaded from AirBnb.
+
+## **7.1 Importing the aspatial data**
+
+Since `listings` data set is in csv file format, we will use [*read_csv()*](https://readr.tidyverse.org/reference/read_delim.html) of **readr** package to import `listing.csv` as shown the code chunk below. The output R object is called `listings` and it is a [tibble data frame](https://r4ds.had.co.nz/tibbles.html).
+
+```{r}
+listings <- read_csv("/Users/jezelei/jezeleii/IS415-GA/Hands-on_Exercise/Hands-on_Ex01/data/aspatial/listings.csv")
+```
+
+After importing the data file into R, it is important for us to examine if the data file has been imported correctly.
+
+The code chunk below shows *list()* of Base R instead of *glimpse()* is used to do the job.
+
+```{r}
+list(listings)
+```
+
+Interpretation: The output reveals that `listing` tibble data frame consists of 3540 rows and 75 columns. Two useful fields we are going to use in the next phase are `latitude` and `longitude`. Note that they are in decimal degree format. As a best guess, we will assume that the data is in **wgs84** Geographic Coordinate System.
+
+## **7.2 Creating a simple feature data frame from an aspatial data frame**
+
+The code chunk below converts `listing` data frame into a simple feature data frame by using [*st_as_sf()*](https://r-spatial.github.io/sf/reference/st_as_sf.html) of **sf** packages
+
+```{r}
+listings_sf <- st_as_sf(listings, 
+                       coords = c("longitude", "latitude"),
+                       crs=4326) %>%
+  st_transform(crs = 3414)
+
+#pipe function
+```
+
+Learning Points from the arguments above:
+
+|                   |                                                                                                                                                                                                                                                                                                                          |
+|----------------|--------------------------------------------------------|
+| *coords* argument | requires you to provide the column name of the x-coordinates first then followed by the column name of the y-coordinates.                                                                                                                                                                                                |
+| *crs* argument    | requires you to provide the coordinates system in epsg format. [EPSG: 4326](https://epsg.io/4326) is wgs84 Geographic Coordinate System and [EPSG: 3414](https://epsg.io/3414) is Singapore SVY21 Projected Coordinate System. You can search for other country’s epsg code by referring to [epsg.io](https://epsg.io/). |
+| *%\>%* (pipe)     | is used to nest *st_transform()* to transform the newly created simple feature data frame into svy21 projected coordinates system.                                                                                                                                                                                       |
+
+I will examine the content of this newly created simple feature data frame.
+
+```{r}
+glimpse(listings_sf)
+```
+
+Table above shows the content of `listing_sf`. Notice that a new column called `geometry`has been added into the data frame. On the other hand, the `longitude` and `latitude`columns have been dropped from the data frame.
+
+# 8.0 Geoprocessing with sf package
+
+------------------------------------------------------------------------
+
+Besides providing functions to handling (i.e. importing, exporting, assigning projection, transforming projection etc) geospatial data, **sf** package also offers a wide range of geoprocessing (also known as GIS analysis) functions.
+
+In this section, I will perform two commonly used geoprocessing functions, namely [buffering](https://www.gislounge.com/buffers-in-gis/) and point in polygon count.
+
+## 8.1 Buffering 
+
+The scenario:
+
+The authority is planning to upgrade the exiting cycling path. To do so, they need to acquire 5 metres of reserved land on the both sides of the current cycling path. You are tasked to determine the extend of the land need to be acquired and their total area.
+
+The solution:
+
+Firstly, [*st_buffer()*](https://r-spatial.github.io/sf/reference/geos_unary.html) of **sf** package is used to compute the 5-meter buffers around cycling paths
+
+```{r}
+buffer_cycling <- st_buffer(cyclingpath, 
+                               dist=5, nQuadSegs = 30)
+```
+
+This is followed by calculating the area of the buffers as shown in the code chunk below.
+
+```{r}
+buffer_cycling$AREA <- st_area(buffer_cycling)
+```
+
+Lastly, sum() of Base R will be used to derive the total land involved
+
+```{r}
+sum(buffer_cycling$AREA)
+```
+
+> Answer differs from '1774367 \[m\^2\]' due to updated data (CyclingPath_Jul2024)
+
+## 8.2 Point-in-polygon count 
+
+The scenario:
+
+A pre-school service group want to find out the numbers of pre-schools in each Planning Subzone.
+
+The solution:
+
+The code chunk below performs two operations at one go. Firstly, identify pre-schools located inside each Planning Subzone by using [st_intersects()](https://r-spatial.github.io/sf/reference/geos_binary_pred.html). Next, [*length()*](https://www.rdocumentation.org/packages/base/versions/3.6.2/topics/length) of Base R is used to calculate numbers of pre-schools that fall inside each planning subzone.
+
+```{r}
+mpsz3414$`PreSch Count`<- lengths(st_intersects(mpsz3414, preschool3414))
+```
+
+> **Warning**: You should not confuse with [st_intersection()](https://r-spatial.github.io/sf/reference/geos_binary_ops.html).
+
+You can check the summary statistics of the newly derived *PreSch Count* field by using *summary()* as shown in the code chunk below.
+
+```{r}
+summary(mpsz3414$`PreSch Count`)
+```
+
+To list the planning subzone with the most number of pre-school, the [*top_n()*](https://dplyr.tidyverse.org/reference/top_n.html) of **dplyr**package is used as shown in the code chunk below.
+
+```{r}
+top_n(mpsz3414, 1, `PreSch Count`)
+```
+
+To calculate the density of pre-school by planning subzone:
+
+The code chunk below uses [*st_area()*](https://r-spatial.github.io/sf/reference/geos_measures.html) of **sf** package to derive the area of each planning subzone.
+
+```{r}
+mpsz3414$Area <- mpsz3414 %>%
+  st_area()
+```
+
+Next, [*mutate()*](https://dplyr.tidyverse.org/reference/mutate.html) of [**dplyr**](https://dplyr.tidyverse.org/) package is used to compute the density by using the code chunk below.
+
+```{r}
+mpsz3414 <- mpsz3414 %>%
+  mutate(`PreSch Density` = `PreSch Count`/Area * 1000000)
+```
+
+# 9.0 Exploratory Data Analysis (EDA) 
+
+In practice, many geospatial analytics start with Exploratory Data Analysis. In this section, you will learn how to use appropriate [ggplot2](https://ggplot2.tidyverse.org/) functions to create functional and yet truthful statistical graphs for EDA purposes.
+
+Firstly, we will plot a histogram to reveal the distribution of `PreSch Density`. Conventionally, *hist()* of R Graphics will be used as shown in the code chunk below.
+
+```{r}
+hist(mpsz3414$`PreSch Density`)
+```
+
+Although the syntax is very easy to use however the output is far from meeting publication quality. Furthermore, the function has limited room for further customisation.
+
+In the code chunk below, appropriate **ggplot2** functions will be used.
+
+```{r}
+ggplot(data=mpsz3414, aes(x= as.numeric(`PreSch Density`)))+
+  geom_histogram(bins=20,
+                 color="black", 
+                 fill="light blue") + 
+  labs(title="Are pre-schools evenly distributed in Singapore?",
+       ubtitle= "There are many planning sub-zones with a single pre-school, on the other hand, \nthere are two planning sub-zones with at least 20 pre-schools",
+      x = "Pre-school density (per km sq)",
+      y = "Frequency")
+```
+
+Using ggplot2 method, plot a scatterplot showing the relationship between PreSch Density and PreSch Count
+
+```{r}
+ggplot(data=mpsz3414, 
+       aes(y = `PreSch Count`, 
+           x= as.numeric(`PreSch Density`)))+
+  geom_point(color="black", 
+             fill="light blue") +
+  xlim(0, 40) +
+  ylim(0, 40) +
+  labs(title = "",
+      x = "Pre-school density (per km sq)",
+      y = "Pre-school count")
+```
