--- a/index.qmd
+++ b/index.qmd
@@ -11,7 +11,11 @@ Welcome to **IS215 Geospatial Analytics Homepage**. I'm Jezelei, a Y3 student ma
 ::: {style="display:flex; align-items:center;"}
 <div>
 
-<h3 style="width:100;" >Hands-On Exercise 01</h3>
+<h3 style="width:100;">
+
+Hands-On Exercise 01
+
+</h3>
 
 <p>Building Block 1: Geospatial Data Science with R</p>
 
