--- a/index.qmd
+++ b/index.qmd
@@ -4,7 +4,7 @@ title: "IS415-GA"
 
 # About
 
-Welcome to **IS215 Geospatial Analytics Homepage**. I'm Jezelei, a Y3 student majoring in IS, specializing in BA & SMT. In this website, you will find my coursework prepared for this course.
+Welcome to **IS215 Geospatial Analytics Homepage**. I'm Jezelei, a Y3 student majoring in IS, specializing in BA & SMT. In this website, you will find my coursework and geospatial analysis projects.
 
 <hr/>
 
