Commit cat function

--- a/Hands-On_Exercise/Hands-on_Ex01/Hands-on_Ex01.qmd
+++ b/Hands-On_Exercise/Hands-on_Ex01/Hands-on_Ex01.qmd
@@ -103,7 +103,7 @@ pacman::p_load(sf,tidyverse)
 In this section, I have imported the following geospatial data into R by using [*st_read()*](https://r-spatial.github.io/sf/reference/st_read.html) of **sf** package:
 
 |                       |                                                    |
-|------------------------|-----------------------------------------------|
+|-------------------------|-----------------------------------------------|
 | `MP14_SUBZONE_WEB_PL` | a polygon feature layer in ESRI shapefile format,  |
 | `CyclingPath`         | a line feature layer in ESRI shapefile format, and |
 | `PreSchool`           | a point feature layer in kml file format           |
@@ -141,7 +141,6 @@ File Format: kml \| Data Frame Type: line feature
 
 ```{r}
 preschool = st_read("data/geospatial/PreSchoolsLocation.kml")
-
 ```
 
 Interpretation : In the `preschool` point feature data frame, there are 2290 features and 2 fields, and is in the wgs84 coordinates systems.
@@ -323,7 +322,7 @@ listings_sf <- st_as_sf(listings,
 Learning Points from the arguments above:
 
 |                   |                                                                                                                                                                                                                                                                                                                          |
-|------------------|------------------------------------------------------|
+|-------------------|-----------------------------------------------------|
 | *coords* argument | requires you to provide the column name of the x-coordinates first then followed by the column name of the y-coordinates.                                                                                                                                                                                                |
 | *crs* argument    | requires you to provide the coordinates system in epsg format. [EPSG: 4326](https://epsg.io/4326) is wgs84 Geographic Coordinate System and [EPSG: 3414](https://epsg.io/3414) is Singapore SVY21 Projected Coordinate System. You can search for other country’s epsg code by referring to [epsg.io](https://epsg.io/). |
 | *%\>%* (pipe)     | is used to nest *st_transform()* to transform the newly created simple feature data frame into svy21 projected coordinates system.                                                                                                                                                                                       |
@@ -415,6 +414,10 @@ Next, [*mutate()*](https://dplyr.tidyverse.org/reference/mutate.html) of [**d
 ```{r}
 mpsz3414 <- mpsz3414 %>%
   mutate(`PreSch Density` = `PreSch Count`/Area * 1000000)
+```
+
+```{r}
+is.numeric(mpsz3414$Pre)
 ```
 
 # 9.0 Exploratory Data Analysis (EDA)
